<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/layout_padding"
    android:layout_height="match_parent"
    tools:context=".fragments.StudentDetailsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="@dimen/studentDetails_tv_topMargin"
            android:id="@+id/id_studentDetails_header"
            android:text="@string/studentDetailsActivity_tv_header"
            android:gravity="center"
            android:textSize="@dimen/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/studentDetails_tv_ll_top_margin"
            android:orientation="vertical"
            android:layout_below="@id/id_studentDetails_header"
            android:id="@+id/id_studentDetails_ll_textView"
            android:layout_height="wrap_content">
            <TextView

                android:gravity="bottom"
                android:layout_width="match_parent"
                android:textSize="@dimen/large_textsize"
                android:text="@string/studentDetails_tv_name"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/studentDetails_tv_topMargin"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:textSize="@dimen/large_textsize"
                android:text="@string/studentDetails_tv_rollno"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/studentDetails_tv_topMargin"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:textSize="@dimen/large_textsize"
                android:text="@string/studentDetails_tv_class"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/studentDetails_et_ll_top_margin"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingStart="@dimen/layout_padding"
            android:layout_below="@id/id_studentDetails_header"
            android:layout_toRightOf="@id/id_studentDetails_ll_textView"
            android:layout_toEndOf="@id/id_studentDetails_ll_textView"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fragment_studentDetails_et_name"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/fragment_studentDetails_et_rollno"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/fragment_studentDetails_et_class"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginTop="@dimen/studentDetails_tv_topMargin"
                android:id="@+id/fragment_studentDetails_btn_add"
                style="@style/primaryButton"
                android:layout_width="wrap_content"
                android:text="@string/fragment_studentList_btn_add" />
        </LinearLayout>

    </RelativeLayout>



</FrameLayout>